# Cowan_F

./: .gitignore  CMakeLists.txt  README.md  SIM.f90  a.txt  charge density.for  example_1.f90  fraction.f90  ion-fraction.for  ion_fraction.f90  simulations-1.f90  simulations-3.f90  simulations-4.f90  simulations.f90  ss  sss.txt  test.f90  widen_4.f90
module/: DFile_Mod.f90  cowan_data_processing.f90  ion_abundance.f90  widen.f90
module/fortjson/: CMakeLists.txt  fjson_constants.f90  fjson_datatype.f90
working_directory/: config2
working_directory/Ge/: config
